# Orchestrion

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DSPFilters.cmake  MuseScore.cmake  README.md  ci_build.cmake  compile_translations.cmake  dlib.cmake  installer.nsi  opencv.cmake  qml-architecture.md  resources.qrc  vst3sdk.cmake
.github/workflows/: c-cpp.yml  orchestrion.yml  release.yml
buildscripts/: harfbuzz.cmake
buildscripts/packaging/Windows/post-install-cleanup/: CMakeLists.txt
docs/: index.html
icons/: music-box.icns  orchestrion.icns
scores/: AVE_MARIA.mscz  attributions.json  comptine-dun-autre-ete-lapres-midi-yann-tiersen.mxl  frere-jacques.musicxml  frere-jacques.mxl
share/: orchestrion.desktop
share/locale/: languages.json  orchestrion_de.ts  orchestrion_en.ts  orchestrion_en_US.ts  orchestrion_ents_de.ts  orchestrion_ents_en.ts  orchestrion_ents_fr.ts  orchestrion_fr.ts
src/: main.cpp
src/App/: CommandLineParser.cpp  CommandLineParser.h  CommandOptions.h  OrchestrionApp.cpp  OrchestrionApp.h  OrchestrionApp.qrc  OrchestrionAppFactory.cpp  OrchestrionAppFactory.h  app.rc
src/ExternalDevices/: CMakeLists.txt  ExternalDevicesModule.cpp  ExternalDevicesModule.h  ExternalDevicesTypes.h  IAudioDeviceService.h  IExternalDevicesConfiguration.h  IMidiDeviceService.h
src/GestureControllers/: CMakeLists.txt  GestureControllerTypes.h  GestureControllersModule.cpp  GestureControllersModule.h  IComputerKeyboard.h  IGestureController.h  IGestureControllerSelector.h  ITouchpadGestureController.h
src/GestureControllers/internal/: GestureControllerConfiguration.cpp  GestureControllerConfiguration.h  GestureControllerInternalTypes.h  GestureControllerSelector.cpp  GestureControllerSelector.h  IGestureControllerConfiguration.h
src/GestureControllers/internal/ComputerKeyboard/: ComputerKeyboard.cpp  ComputerKeyboard.h  ComputerKeyboardGestureController.cpp  ComputerKeyboardGestureController.h
src/GestureControllers/internal/MidiDevice/: MidiDeviceGestureController.cpp  MidiDeviceGestureController.h
src/GestureControllers/internal/Touchpad/: DummyOperatingSystemTouchpad.h  IClock.h  IOperatingSystemTouchpad.h  ITouchpad.h  MacosTouchpad.h  MacosTouchpad.mm  MacosTouchpadNative.h  MacosTouchpadNative.m  OperatingSystemTouchpadFactory.cpp  OperatingSystemTouchpadFactory.h  OperatingSystemTouchpadProcessor.cpp  OperatingSystemTouchpadProcessor.h  SteadyClock.h  SwipeGestureController.cpp  SwipeGestureController.h  Touchpad.cpp  Touchpad.h  TouchpadGestureController.cpp  TouchpadGestureController.h  WindowsTouchpad.cpp  WindowsTouchpad.h
src/GestureControllers/internal/Touchpad/testapp/: CMakeLists.txt  qmldir  touchpad_testapp.qrc  touchpad_testapp_main.cpp  touchpad_testapp_main.qml  touchpad_testapp_model.cpp  touchpad_testapp_model.h
src/GestureControllers/internal/Touchpad/training/: create-wavefile.py  pianissimo-debug.py  pianissimo.py  pianissimo_labels.py  pianissimo_labels.txt  show-training-data.py
src/MuseScoreShell/: CMakeLists.txt  MuseScoreShellTypes.h  MusescoreShellModule.cpp  MusescoreShellModule.h  OrchestrionActionIds.h
src/Orchestrion/: CMakeLists.txt  IChord.h  IChordRest.h  IGamepad.h  IGamepadMidiController.h  IIntensityController.h  IOrchestrion.h  IOrchestrionSequencer.h  IRest.h  Orchestrion.qrc  OrchestrionModule.cpp  OrchestrionModule.h  OrchestrionTypes.h
src/OrchestrionCommon/: OrchestrionCommonTypes.h
src/OrchestrionConfiguration/: CMakeLists.txt  OrchestrionConfigurationModule.cpp  OrchestrionConfigurationModule.h
src/OrchestrionNotation/: CMakeLists.txt  ILoopBoundariesController.h  IOrchestrionNotationInteraction.h  IOrchestrionNotationInteractionProcessor.h  OrchestrionNotation.qrc  OrchestrionNotationModule.cpp  OrchestrionNotationModule.h
src/OrchestrionOnboarding/: CMakeLists.txt  OrchestrionOnboardingModule.cpp  OrchestrionOnboardingModule.h
src/OrchestrionSequencer/: CMakeLists.txt  IChord.h  IComputerKeyboard.h  IComputerKeyboardMidiController.h  IMelodySegment.h  IModifiableItem.h  IModifiableItemRegistry.h  IOrchestrion.h  IOrchestrionSequencer.h  IOrchestrionSequencerConfiguration.h  IOrchestrionSequencerUiActions.h  IRest.h  NoteLabel.h  OrchestrionModule.cpp  OrchestrionModule.h  OrchestrionSequencer.qrc  OrchestrionTypes.h
src/OrchestrionShell/: CMakeLists.txt  IControllerMenuManager.h  IMidiControllerManager.h  IMidiSynthesizerManager.h  IOrchestrionActionController.h  IOrchestrionStartupScenario.h  IOrchestrionUiActions.h  IPlaybackDeviceManager.h  ISynthesizerManager.h  ISynthesizerMenuManager.h  OrchestrionShell.qrc  OrchestrionShellModule.cpp  OrchestrionShellModule.h  OrchestrionShellTypes.h
src/OrchestrionShell/internal/: ControllerMenuManager.cpp  ControllerMenuManager.h  DeviceMenuManager.cpp  DeviceMenuManager.h  MidiControllerMenuManager.cpp  MidiControllerMenuManager.h  MidiSynthesizerMenuManager.cpp  MidiSynthesizerMenuManager.h  OrchestrionActionController.cpp  OrchestrionActionController.h  OrchestrionEventProcessor.cpp  OrchestrionEventProcessor.h  OrchestrionStartupScenario.cpp  OrchestrionStartupScenario.h  OrchestrionUiActions.cpp  OrchestrionUiActions.h  PlaybackDeviceMenuManager.cpp  PlaybackDeviceMenuManager.h  SleepInhibitor.cpp  SleepInhibitor.h  SynthesizerManager.cpp  SynthesizerManager.h  SynthesizerMenuManager.cpp  SynthesizerMenuManager.h
src/OrchestrionShell/qml/Orchestrion/OrchestrionShell/: qmldir
src/OrchestrionShell/view/: NotationPaintViewLoaderModel.cpp  NotationPaintViewLoaderModel.h  OrchestrionMenuModel.cpp  OrchestrionWindowTitleProvider.cpp  OrchestrionWindowTitleProvider.h  PlaybackButtonModel.cpp  PlaybackButtonModel.h  ScoreAttributionModel.cpp  ScoreAttributionModel.h
src/OrchestrionSynthesis/: CMakeLists.txt  IOrchestrionSynthesisConfiguration.h  ISynthesizerConnector.h  ISynthesizerManager.h  ITrackChannelMapper.h  OrchestrionSynthesisModule.cpp  OrchestrionSynthesisModule.h  classDiagram.md
src/ScoreAnimation/: CMakeLists.txt  IChordRegistry.h  (+5 more)
wallpapers/: make_orchestrion_wallpaper.ps1  readme.md
(+206 files in other folders)
